--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
              </div>
              <div class="box">
                 <h2>Art Direction</h2>
-                <p>Art direction is the process of bringing together all of the creative elements of a project to create a cohesive and visually stunning end product. I work with clients to develop a concept and bring it to life through art direction. I believe that attention to detail and a clear vision </p>
+                <p>I specialize in developing websites using Webflow, a powerful platform that allows for easy customization and responsive design. I have experience building websites for a variety of industries, from small businesses to large corporations.</p>
                 <div class="wrapper">
                     
                     <a class="buttom-section" href="#">CONCEPT DESIGN</a>
