--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 <link rel="stylesheet" href="componentes/section3.css">
 <link rel="stylesheet" href="componentes/formulario.css">
 <link rel="stylesheet" href="componentes/footer.css">
-
+<link rel="stylesheet" href="componentes/respo-tablet.css">
 <link rel="stylesheet" href="componentes/responsividade.css">
+<link rel="stylesheet" href="componentes/respo-celular-grande.css">
+<link rel="stylesheet" href="componentes/respo-iphone.css">
 
 <body>
 
